--- a/src/main/webapp/VIEW/updateCm.xhtml
+++ b/src/main/webapp/VIEW/updateCm.xhtml
@@ -9,13 +9,13 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['cmPage.updateCmTitle']}"/>
+        <h:outputText value="#{I18N['cm.modify']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['cmPage.updateCmTitle']}" />
+                    <h:outputText value="#{I18N['cm.modify']}" />
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
@@ -273,7 +273,7 @@
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                        <p:outputPanel rendered="#{(connectionBean.user.roleByIdRole.roleLabel == 'SITE' or connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL') and cmBean.cm.eventByIdEvent.available}">
-                            <p:commandButton value="#{I18N['application.update.cm']}"
+                            <p:commandButton value="#{I18N['cm.modify']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
@@ -282,7 +282,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and !eventBean.event.monitored and eventBean.event.available}">
-                            <p:commandButton value="#{I18N['application.cm.validate']}"
+                            <p:commandButton value="#{I18N['application.monitor']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
@@ -290,7 +290,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and eventBean.event.monitored and eventBean.event.available}">
-                            <p:commandButton value="#{I18N['application.cm.revalidate']}"
+                            <p:commandButton value="#{I18N['application.non.monitor']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
