--- a/src/main/webapp/VIEW/header.xhtml
+++ b/src/main/webapp/VIEW/header.xhtml
@@ -78,8 +78,8 @@
                 </p:submenu>
                 <p:submenu label="#{I18N['menu.MEDICAL']}" icon="pi pi-fw pi-heart" rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL'}">
                     <p:submenu label="#{I18N['menu.data.MEDICAL']}" icon="pi pi-fw pi-heart" rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL'}">
-                        <p:menuitem value="#{I18N['menu.data.MEDICAL.to.validate']}" icon="pi pi-fw pi-heart-fill" action="/VIEW/listOfAllEventsToCodeAe.xhtml" rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL'}"/>
-                        <p:menuitem value="#{I18N['menu.data.MEDICAL.to.validate']}" icon="pi pi-fw pi-heart-fill" action="/VIEW/listOfAllEventsToCodeCm.xhtml" rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL'}"/>
+                        <p:menuitem value="#{I18N['menu.data.MEDICAL.to.CodeAe']}" icon="pi pi-fw pi-heart-fill" action="/VIEW/listOfAllEventsToCodeAe.xhtml" rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL'}"/>
+                        <p:menuitem value="#{I18N['menu.data.MEDICAL.to.CodeCm']}" icon="pi pi-fw pi-heart-fill" action="/VIEW/listOfAllEventsToCodeCm.xhtml" rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL'}"/>
                         <p:divider/>
                     </p:submenu>
                 </p:submenu>
@@ -93,6 +93,10 @@
                         <p:divider/>
                     </p:submenu>
                 </p:submenu>
+                    <p:submenu label="#{I18N['menu.auditTrail']}" icon="pi pi-fw pi-calendar">
+                        <p:menuitem value="#{I18N['menu.auditTrail']}" icon="pi pi-fw pi-calendar" action="/VIEW/listOfAuditTrail.xhtml"/>
+                        <p:divider/>
+                    </p:submenu>
                 <f:facet name="options">
                     <p:commandButton value="Logout"  action="#{connectionBean.logOut}" icon="pi pi-fw pi-sign-out" styleClass="ui-button-info"/>
                 </f:facet>
