--- a/src/main/webapp/VIEW/listOfAllQueriesToAnswerPermitted.xhtml
+++ b/src/main/webapp/VIEW/listOfAllQueriesToAnswerPermitted.xhtml
@@ -45,7 +45,7 @@
                         <p:column>
                             <f:facet name="header">#{I18N['query.dateTime']}</f:facet>
                             <h:outputText value="#{r.queryDatetime}">
-                                <f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss" />
+                                <f:convertDateTime timeZone="CET" pattern="dd/MM/yyyy HH:mm:ss" />
                             </h:outputText>
                         </p:column>
                         <p:column>
