--- a/src/main/webapp/VIEW/updateIc.xhtml
+++ b/src/main/webapp/VIEW/updateIc.xhtml
@@ -9,13 +9,13 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['icPage.updateIcTitle']}"/>
+        <h:outputText value="#{I18N['ic.modify']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['icPage.updateIcTitle']}" />
+                    <h:outputText value="#{I18N['ic.modify']}" />
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
@@ -109,7 +109,7 @@
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'SITE' and icBean.ic.eventByIdEvent.available}">
-                            <p:commandButton value="#{I18N['icPage.updateIcTitle']}"
+                            <p:commandButton value="#{I18N['ic.modify']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
@@ -118,7 +118,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and !eventBean.event.monitored and eventBean.event.available}">
-                            <p:commandButton value="#{I18N['application.ic.validate']}"
+                            <p:commandButton value="#{I18N['application.monitor']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
@@ -126,7 +126,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and eventBean.event.monitored and eventBean.event.available}">
-                            <p:commandButton value="#{I18N['application.dov.revalidate']}"
+                            <p:commandButton value="#{I18N['application.non.monitor']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
