--- a/src/main/webapp/VIEW/updateTe.xhtml
+++ b/src/main/webapp/VIEW/updateTe.xhtml
@@ -9,13 +9,13 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['te.consult']}"/>
+        <h:outputText value="#{I18N['te.modify']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['te.consult']}" />
+                    <h:outputText value="#{I18N['te.modify']}" />
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
@@ -151,7 +151,7 @@
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                          <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'SITE' and teBean.te.eventByIdEvent.available}">
-                            <p:commandButton value="#{I18N['application.update.te']}"
+                            <p:commandButton value="#{I18N['te.modify']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
@@ -160,7 +160,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and !eventBean.event.monitored and eventBean.event.available}">
-                            <p:commandButton value="#{I18N['application.te.validate']}"
+                            <p:commandButton value="#{I18N['application.monitor']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
@@ -168,7 +168,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and eventBean.event.monitored and eventBean.event.available}">
-                            <p:commandButton value="#{I18N['application.te.revalidate']}"
+                            <p:commandButton value="#{I18N['application.non.monitor']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
