--- a/src/main/webapp/VIEW/updateVs.xhtml
+++ b/src/main/webapp/VIEW/updateVs.xhtml
@@ -9,13 +9,13 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['vsPage.addVsTitle']}"/>
+        <h:outputText value="#{I18N['vs.modify']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['vsPage.addVsTitle']}" />
+                    <h:outputText value="#{I18N['vs.modify']}" />
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
@@ -543,7 +543,7 @@
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'SITE' and vsBean.vs.eventByIdEvent.available}">
-                            <p:commandButton value="#{I18N['application.update.vs']}"
+                            <p:commandButton value="#{I18N['vs.modify']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
@@ -552,7 +552,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and !eventBean.event.monitored and eventBean.event.available}">
-                            <p:commandButton value="#{I18N['application.vs.validate']}"
+                            <p:commandButton value="#{I18N['application.monitor']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
@@ -560,7 +560,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and eventBean.event.monitored and eventBean.event.available}">
-                            <p:commandButton value="#{I18N['application.vs.revalidate']}"
+                            <p:commandButton value="#{I18N['application.non.monitor']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
