--- a/src/main/webapp/VIEW/addAe.xhtml
+++ b/src/main/webapp/VIEW/addAe.xhtml
@@ -14,7 +14,7 @@
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['aePage.addAeTitle']}" />
+                    <h:outputText value="#{I18N['aePage.addAeTitle']} - #{I18N['subjectPage.subjectNum']} : #{eventBean.event.subjectByIdSubject.subjectNum}"/>
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
