--- a/src/main/webapp/VIEW/updateAe.xhtml
+++ b/src/main/webapp/VIEW/updateAe.xhtml
@@ -14,7 +14,7 @@
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['ae.modify']}" />
+                    <h:outputText value="#{I18N['ae.modify']} - #{I18N['subjectPage.subjectNum']} : #{eventBean.event.subjectByIdSubject.subjectNum}" />
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
