--- a/src/main/webapp/VIEW/updateDov.xhtml
+++ b/src/main/webapp/VIEW/updateDov.xhtml
@@ -15,7 +15,7 @@
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['application.update.dov']}" />
+                    <h:outputText value="#{I18N['application.update.dov']} - #{I18N['subjectPage.subjectNum']} : #{eventBean.event.subjectByIdSubject.subjectNum}" />
                 </h2>
                 <h:form id="updateDov">
                     <p:outputPanel class="form-control">
