--- a/src/main/webapp/VIEW/addCm.xhtml
+++ b/src/main/webapp/VIEW/addCm.xhtml
@@ -15,7 +15,7 @@
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['cmPage.addCmTitle']}" />
+                    <h:outputText value="#{I18N['cmPage.addCmTitle']} - #{I18N['subjectPage.subjectNum']} : #{eventBean.event.subjectByIdSubject.subjectNum}"/>
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
