--- a/src/main/webapp/VIEW/updateTe.xhtml
+++ b/src/main/webapp/VIEW/updateTe.xhtml
@@ -15,7 +15,7 @@
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['te.modify']}" />
+                    <h:outputText value="#{I18N['te.modify']} - #{I18N['subjectPage.subjectNum']} : #{eventBean.event.subjectByIdSubject.subjectNum}" />
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
